<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_projectnavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_frame_study" />

    <Button
        android:id="@+id/btn_okhttp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_projectnavigation"
        android:layout_alignParentStart="true"
        android:text="@string/okhttp"
        android:textAllCaps="false"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn_androidasynchttp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_okhttp"
        android:layout_alignParentStart="true"
        android:text="@string/androidasynchttp"
        android:textAllCaps="false"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btn_retrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_androidasynchttp"
        android:layout_alignParentStart="true"
        android:text="@string/retrofit"
        android:textAllCaps="false"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btn_xutils3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_retrofit"
        android:layout_alignParentStart="true"
        android:text="@string/xutils3"
        android:textAllCaps="false"
        android:onClick="onClick" />

</RelativeLayout>
